# ajazz-time-correction-tool

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  ajazz_time_correction_tool  build.zig  main.cpp
.github/workflows/: build.yml  main.yml
libs/hidapi/: CMakeLists.txt
libs/hidapi/hidapi/: hidapi.c  hidapi.h
src/: main.rs  main.zig
